fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .App {
-  margin: 0 auto;
-  max-width: 1264px;
+  width: 100%;
+  overflow-x: clip;
 }
